# komodo-docs-mdx

./: .coverage  .cursorrules  .gitignore  2  API_DOCUMENTATION_STYLE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTION_GUIDE.md  GITFLOW_BRANCHING.md  MDX_EXAMPLE_STANDARDS.md  QA_GUIDE.md  README.md  STYLE_GUIDE.md  YAML_SCHEMA_UPDATE_SUMMARY.md  all_mdx_files.txt  authors.json  demo.mdx  filepathSlugs.json  kdf_errors_map.json  openapi_table_template.md  progress_table_files.txt  pyproject.toml  update_yaml_schemas.py
utils/py/: .envrc  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  CLEANUP_INTEGRATION.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_DOCS_AUTOGEN.md  README_DRAFT_QUALITY.md  REFACTORING_SUMMARY.md  SCANNER_CONSOLIDATION.md  __init__.py  api_example_manager.py  converter.py  deduplicate_examples.py  gen_api_methods_table.py  generate_error_docs.py  kdf_docs_autogen.py  kdf_tools.py  kdf_tui.py  map_kdf_methods.py  mapping.py  method_pages.json  postman_collection_generator.py  pretty_print_md_table.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docgen.txt  requirements-tui.txt  requirements.txt  scan_existing_docs.py  setup.py  strategy-notes.md  test_consolidated_scanners.py  test_kdf.sh  test_prettify.py  unified_method_mapping.json  update_openapi.sh
utils/py/data/: category_mappings.json  coins_config_loader.py  dispatcher.rs  existing_method_patterns.json  kdf_detailed_method_analysis_20250617_093411.json  kdf_json_method_paths_20250617_030011.json  kdf_json_method_paths_20250617_030633.json  kdf_json_methods_20250617_030011.json  kdf_json_methods_20250617_030633.json  kdf_mdx_method_paths_20250617_030009.json  kdf_mdx_method_paths_20250617_030632.json  kdf_mdx_methods_20250617_030009.json  kdf_mdx_methods_20250617_030632.json  kdf_openapi_method_paths_20250617_030010.json  kdf_openapi_method_paths_20250617_030504.json  kdf_openapi_method_paths_20250617_030539.json  kdf_openapi_method_paths_20250617_030604.json  kdf_openapi_method_paths_20250617_030605.json  kdf_openapi_method_paths_20250617_030632.json  kdf_openapi_methods_20250617_030010.json  kdf_openapi_methods_20250617_030504.json  kdf_openapi_methods_20250617_030539.json  kdf_openapi_methods_20250617_030604.json  kdf_openapi_methods_20250617_030605.json  kdf_openapi_methods_20250617_030632.json  kdf_postman_method_paths_20250617_030012.json  kdf_postman_method_paths_20250617_030634.json  kdf_postman_method_paths_20250618_095407.json  kdf_postman_methods_20250617_030012.json  kdf_postman_methods_20250617_030634.json  kdf_postman_methods_20250618_095400.json  kdf_postman_methods_20250618_095407.json  kdf_repo_methods.json  kdf_repo_vs_docs_comparison_dev.json  kdf_rust_methods_dev_20250617_030009.json  kdf_rust_methods_dev_20250617_030631.json  kdf_rust_methods_dev_20250618_124357.json  kdf_rust_methods_dev_20250618_124415.json  kdf_rust_methods_dev_20250618_124931.json  kdf_rust_methods_dev_20250618_125546.json  (+13 more)
utils/py/demos/: README.md  demo_nested_structure.py  migrate_to_nested_structure.py  repository_integration_example.py
utils/py/examples/: README.md  basic_logging.py  performance_comparison.py  repository_integration_example.py
utils/py/kdf_test_cases/: README.md  test_kdf_methods.py  test_params.json
utils/py/komodo_defi_docs_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
utils/py/lib/: ARCHITECTURE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  README_REFACTORING.md  __init__.py  async_utils.py  base_file_manager.py  cache.py  cli_base.py  config.py  converter.py  deduplicator.py  example_manager.py  examples.py  extractors.py  factories.py  file_operations.py  file_scanners.py  logging_utils.py  mapping.py  method_normalizer.py  observers.py  openapi_manager.py  postman.py  postman_consolidated.py  postman_core.py  postman_file_ops.py  postman_generators.py  postman_io.py  postman_organizers.py  postman_requests.py  postman_scanners.py  processors.py  reporters.py  repository_scanner.py  shared_utils.py  table_manager.py  unified_scanners.py  (+1 more)
(+3866 files in other folders)
